[gd_scene load_steps=10 format=2]

[ext_resource path="res://levelup1.png" type="Texture" id=1]
[ext_resource path="res://LevelUp.gd" type="Script" id=2]
[ext_resource path="res://text.tres" type="Animation" id=3]
[ext_resource path="res://ButtonTheme.tres" type="Theme" id=4]
[ext_resource path="res://hes_a_mantas.mp3" type="AudioStream" id=5]

[sub_resource type="StyleBoxTexture" id=19]

[sub_resource type="Theme" id=18]
TabContainer/colors/font_color_bg = Color( 0.69, 0.69, 0.69, 1 )
TabContainer/colors/font_color_disabled = Color( 0.9, 0.9, 0.9, 0.2 )
TabContainer/colors/font_color_fg = Color( 0.94, 0.94, 0.94, 1 )
TabContainer/constants/hseparation = 4
TabContainer/constants/label_valign_bg = 2
TabContainer/constants/label_valign_fg = 0
TabContainer/constants/side_margin = 8
TabContainer/constants/top_margin = 24
TabContainer/fonts/font = null
TabContainer/icons/decrement = null
TabContainer/icons/decrement_highlight = null
TabContainer/icons/increment = null
TabContainer/icons/increment_highlight = null
TabContainer/icons/menu = null
TabContainer/icons/menu_highlight = null
TabContainer/styles/panel = SubResource( 19 )
TabContainer/styles/tab_bg = null
TabContainer/styles/tab_disabled = null
TabContainer/styles/tab_fg = null

[sub_resource type="StyleBoxTexture" id=20]
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 1000, 1000 )
modulate_color = Color( 1, 0.54902, 0.54902, 1 )

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/Button:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "Str" ]
}

[node name="PopupPanel" type="PopupPanel"]
pause_mode = 2
self_modulate = Color( 0.395317, 0, 0.710573, 1 )
anchor_right = 1.482
anchor_bottom = 1.022
margin_right = -1.0
margin_bottom = -5.20007
rect_min_size = Vector2( 185, 302 )
theme = SubResource( 18 )
custom_styles/panel = SubResource( 20 )
script = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 22 )
anims/text = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.458824 )
anchor_right = 1.0
anchor_bottom = 1.008
margin_bottom = -4.86401
rect_min_size = Vector2( 185, 302 )

[node name="Button" type="Button" parent="Panel"]
modulate = Color( 0.352941, 0.560784, 0, 1 )
margin_left = 438.0
margin_top = 150.0
margin_right = 606.0
margin_bottom = 190.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 168, 40 )
hint_tooltip = "Strenth Increases Jump Height"
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 4 )
text = "Str"

[node name="Label" type="Label" parent="Panel/Button"]
margin_left = 19.0
margin_top = 10.0
margin_right = 139.0
margin_bottom = 35.0
text = "strength"
align = 1

[node name="Button2" type="Button" parent="Panel"]
modulate = Color( 0.352941, 0.560784, 0, 1 )
margin_left = 438.0
margin_top = 200.0
margin_right = 606.0
margin_bottom = 240.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 168, 40 )
hint_tooltip = "Speed Increases move speed"
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 4 )
text = "                            "

[node name="Label" type="Label" parent="Panel/Button2"]
margin_left = 18.0
margin_top = 11.0
margin_right = 138.0
margin_bottom = 36.0
text = "Speed"
align = 1

[node name="Button3" type="Button" parent="Panel"]
modulate = Color( 0.352941, 0.560784, 0, 1 )
margin_left = 438.0
margin_top = 250.0
margin_right = 606.0
margin_bottom = 290.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 168, 40 )
hint_tooltip = "Dexterity increases jump amount"
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 4 )
text = "                            "

[node name="Label" type="Label" parent="Panel/Button3"]
margin_left = 22.0
margin_top = 9.0
margin_right = 142.0
margin_bottom = 34.0
text = "Dexterity"
align = 1

[node name="Button4" type="Button" parent="Panel"]
modulate = Color( 0.352941, 0.560784, 0, 1 )
margin_left = 438.0
margin_top = 300.0
margin_right = 606.0
margin_bottom = 340.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 168, 40 )
hint_tooltip = "Skill is Your wall jump distance"
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 4 )
text = "                            "

[node name="Label" type="Label" parent="Panel/Button4"]
margin_left = 21.0
margin_top = 10.0
margin_right = 141.0
margin_bottom = 35.0
text = "Skill"
align = 1

[node name="Button5" type="Button" parent="Panel"]
modulate = Color( 0.352941, 0.560784, 0, 1 )
margin_left = 438.0
margin_top = 350.0
margin_right = 606.0
margin_bottom = 390.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 168, 40 )
hint_tooltip = "Body Increases Max Health"
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 4 )
text = "                            "

[node name="Label" type="Label" parent="Panel/Button5"]
margin_left = 23.0
margin_top = 9.0
margin_right = 143.0
margin_bottom = 34.0
text = "Body"
align = 1

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
pitch_scale = 1.6

[connection signal="about_to_show" from="." to="." method="_on_PopupPanel_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_PopupPanel_popup_hide"]
[connection signal="button_up" from="Panel/Button" to="." method="_on_Label_button_up"]
[connection signal="focus_entered" from="Panel/Button" to="." method="_on_Label_focus_entered"]
[connection signal="pressed" from="Panel/Button" to="." method="_on_Label_pressed"]
[connection signal="button_up" from="Panel/Button2" to="." method="_on_Label2_button_up"]
[connection signal="focus_entered" from="Panel/Button2" to="." method="_on_Label2_focus_entered"]
[connection signal="pressed" from="Panel/Button2" to="." method="_on_Label2_pressed"]
[connection signal="button_up" from="Panel/Button3" to="." method="_on_Label3_button_up"]
[connection signal="focus_entered" from="Panel/Button3" to="." method="_on_Label3_focus_entered"]
[connection signal="pressed" from="Panel/Button3" to="." method="_on_Label3_pressed"]
[connection signal="button_up" from="Panel/Button4" to="." method="_on_Label4_button_up"]
[connection signal="focus_entered" from="Panel/Button4" to="." method="_on_Label4_focus_entered"]
[connection signal="pressed" from="Panel/Button4" to="." method="_on_Label4_pressed"]
[connection signal="button_up" from="Panel/Button5" to="." method="_on_Label5_button_up"]
[connection signal="focus_entered" from="Panel/Button5" to="." method="_on_Label5_focus_entered"]
[connection signal="pressed" from="Panel/Button5" to="." method="_on_Label5_pressed"]
